Fixed picture not showing

--- a/style.css
+++ b/style.css
@@ -672,6 +672,12 @@ small {
     }
 }
 
+@media (max-width: 480px) {
+    #reportContent {
+        text-align: left;
+    }
+}
+
 #reportContent a {
     color: black;
 }
